# dapi

./: .env.example  Dockerfile.base  README.md  docker-compose.yml  pyproject.toml  run.py
app/: analytics.py  base_api_views.py  config.py  main.py
app/db/: models.py  session.py
app/serializers/: _s_parents.py  _utils.py  serializers.py
migrations/: env.py
migrations/versions/: 4e56c1f88b64_first.py
